Changed app to run pug instead of jade and added pug-bootstrap

--- a/Raspberry/node-app/package.json
+++ b/Raspberry/node-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "checkpoints",
+  "name": "node-app",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.0"
+    "jade-bootstrap": "^1.0.14",
+    "morgan": "~1.9.0",
+    "pug": "2.0.0-beta11"
   }
 }
